[gd_scene load_steps=20 format=2]

[ext_resource path="res://Sprites/Player/Player.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Player/Weapons/Minigun_right.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Levels/World.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Player/Weapons/Minigun_left.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Levels/WaypointNode.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/Etc/WallWhite.png" type="Texture" id=6]
[ext_resource path="res://Scripts/PlayerScripts/CharacterFollower2D.gd" type="Script" id=7]
[ext_resource path="res://Scripts/WaypointNode.gd" type="Script" id=8]
[ext_resource path="res://Sprites/Splats/splat00.png" type="Texture" id=9]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1, -3, 75.8864, 39.2401, -75.8864, -39.2401, -191, -27, 69.0353, -4.64494, -69.0353, 4.64494, -359, -92 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1, -3, -38.4222, 15.8807, 38.4222, -15.8807, 102, -19, -139.298, -6.12263, 139.298, 6.12263, 278, -70 )
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1, -3, 7.41624, 76.2813, -7.41624, -76.2813, -5, -71, 28.739, 26.6718, -28.739, -26.6718, -39, -161, 23.0144, 40.2535, -23.0144, -40.2535, -70, -263 )
}

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1, -3, -19.5228, -78.6184, 19.5228, 78.6184, 11, 100, 0.192132, -9.88335, -0.192132, 9.88335, 47, 193, 10.3023, -38.0159, -10.3023, 38.0159, 51, 287 )
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 31, 41.5 )

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1, -2, 74.5511, -50.8926, -74.5511, 50.8926, -167, 44, 69.0353, -4.64494, -69.0353, 4.64494, -301, 69 )
}

[sub_resource type="Curve2D" id=7]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1, -3, -142.397, 8.7374, 142.397, -8.7374, 189, -30, -139.298, -6.12263, 139.298, 6.12263, 407, -29 )
}

[sub_resource type="Curve2D" id=8]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1, -3, 51.9612, 28.6182, -51.9612, -28.6182, -194, -150, 76.9138, 4.1721, -76.9138, -4.1721, -373, -192 )
}

[sub_resource type="Curve2D" id=9]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1, -3, 13.4772, -15.6184, -13.4772, 15.6184, -17, 121, 63.8023, -5.0159, -63.8023, 5.0159, -253, 355 )
}

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 21.5, 18.5 )

[node name="World" type="Node2D"]
position = Vector2( 518, 305 )

[node name="WaypointNode" parent="." instance=ExtResource( 5 )]
position = Vector2( 1, -1 )
levelToLoad = ExtResource( 3 )

[node name="Path2DL" type="Path2D" parent="WaypointNode"]
position = Vector2( 0, 4 )
curve = SubResource( 1 )

[node name="Path2DR" type="Path2D" parent="WaypointNode"]
position = Vector2( 0, 16 )
curve = SubResource( 2 )

[node name="Path2DU" type="Path2D" parent="WaypointNode"]
position = Vector2( 0, 12 )
curve = SubResource( 3 )

[node name="Path2DD" type="Path2D" parent="WaypointNode"]
position = Vector2( 0, 8 )
curve = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -4 )
rotation = 1.5708
scale = Vector2( 0.1, 0.1 )
current = true

[node name="OverworldPlayer" type="KinematicBody2D" parent="." groups=["Player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OverworldPlayer"]
position = Vector2( 5, -0.5 )
shape = SubResource( 5 )

[node name="TopDownPlayer" type="Sprite" parent="OverworldPlayer"]
position = Vector2( 0, -4 )
rotation = 1.5708
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="GunL" type="Sprite" parent="OverworldPlayer/TopDownPlayer"]
position = Vector2( -330, -70 )
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 4 )

[node name="GunR" type="Sprite" parent="OverworldPlayer/TopDownPlayer"]
position = Vector2( 370, -80 )
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 2 )

[node name="Feet" type="Sprite" parent="OverworldPlayer/TopDownPlayer"]
position = Vector2( 10, -80 )
scale = Vector2( 5, 5 )
z_index = -1
texture = ExtResource( 6 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="OverworldPlayer/TopDownPlayer"]
remote_path = NodePath("../../../Camera2D")

[node name="WaypointNode2" type="Node2D" parent="."]
position = Vector2( 305, -72 )
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="WaypointNode2"]
self_modulate = Color( 0.643137, 0.643137, 0.643137, 1 )
z_index = -1
texture = ExtResource( 9 )

[node name="Path2DL" type="Path2D" parent="WaypointNode2"]
position = Vector2( 0, 4 )
curve = SubResource( 6 )

[node name="PathFollowerL" type="PathFollow2D" parent="WaypointNode2/Path2DL"]
position = Vector2( -1, -2 )
rotation = 3.14059
loop = false
lookahead = 15.0
script = ExtResource( 7 )
runSpd = 150

[node name="Path2DR" type="Path2D" parent="WaypointNode2"]
position = Vector2( 0, 16 )
curve = SubResource( 7 )

[node name="PathFollowerR" type="PathFollow2D" parent="WaypointNode2/Path2DR"]
position = Vector2( 1, -3 )
rotation = -0.294527
loop = false
lookahead = 15.0
script = ExtResource( 7 )
runSpd = 150

[node name="Path2DU" type="Path2D" parent="WaypointNode2"]
position = Vector2( -1, 14 )
curve = SubResource( 8 )

[node name="PathFollowerU" type="PathFollow2D" parent="WaypointNode2/Path2DU"]
position = Vector2( 1, -3 )
rotation = -2.45404
loop = false
lookahead = 15.0
script = ExtResource( 7 )
runSpd = 150

[node name="Path2DD" type="Path2D" parent="WaypointNode2"]
position = Vector2( 0, 8 )
curve = SubResource( 9 )

[node name="PathFollowerD" type="PathFollow2D" parent="WaypointNode2/Path2DD"]
position = Vector2( 1, -3 )
rotation = 1.62316
loop = false
lookahead = 15.0
script = ExtResource( 7 )
runSpd = 150

[node name="Area2D" type="Area2D" parent="WaypointNode2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaypointNode2/Area2D"]
position = Vector2( 0.5, -0.5 )
shape = SubResource( 10 )

[connection signal="body_entered" from="WaypointNode2/Area2D" to="WaypointNode2" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="WaypointNode2/Area2D" to="WaypointNode2" method="_on_Area2D_body_exited"]
